--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me webpage</title>
+    <title>About me|Webpage</title>
 </head>
 <body>
     <h1>Hello, I am Gabriel and i love coding :)</h1>
