--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact | Webpage</title>
+</head>
+<body>
+    <h1>This page is in <u>BETA</u></h1>
 
+    <a href="index.html"><h2>Go back to Home</h2></a>
+</body>
+</html>
