--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <a href="about.html"><h2>Click here to learn about me!</h2></a>
 
     <footer>&copy; 2024 ImStrider. All rights reserved.</footer>
+        <a href="contact.html"><p>Contact Us</p></a>
 </div>
 </body>
 </html>
